# AskMyDocs

./: .gitignore  README.md  import_test_output.txt  pip_list_base1.txt  pyproject.toml  requirements.txt  setup.sh  start.bat  test_all_imports.py  test_classic.py  test_import.py  test_import_2.py
src/: analytics.py  app.py  conversation.py  document_utils.py  prompt_refiner.py  text_processing.py
